This file documents the revision history for the Monitoring Webinterface Thruk.

0.25_1  Sat Feb  6 17:29:12 CET 2010
          - added trends

0.23_3  Sat Feb  6 00:06:39 CET 2010
          - added paging for hosts / services

0.23_2  Wed Feb  3 13:31:33 CET 2010
          - added paging to extinfo type 7
          - added config switch to disable paging
          - added date picker to commands

0.21_2  Thu Jan 28 19:13:31 CET 2010
          - fixed fonts in menu
          - made date/time format configurable

0.21_1  Sun Jan 24 09:18:54 CET 2010
          - added availability page
          - trends, statusmap, statuswrl are optional and can be hidden

0.20_3  Thu Jan 14 21:29:54 CET 2010
          - increased showlog performance

0.20_3  Sun Jan 10 14:13:14 CET 2010
          - using frames is no configurable
          - documentation is now replaceable
          - corrected valid html
          - fixed order of logfiles

0.20_1  Thu Jan  7 19:55:36 CET 2010
          - changed logging to log4perl

0.20_0  Tue Jan  5 01:25:14 CET 2010
          - renamed project to Thruk
          - added changelog to start page

0.11_0  Fri Jan  1 20:01:12 CET 2010
          - added history page
          - commands can be disabled by configuration
          - fixed problem with group auth
          - fixed version in infobox

0.10_6  Wed Dec 30 14:52:49 CET 2009
          - completed showlog page

0.10_5  Sun Dec 20 00:09:43 CET 2009
          - added multi monitoring backend

0.10_4  Fri Dec  4 09:50:46 CET 2009
          - completed status overview page
          - completed extinfo pages 5 and 8
          - completed outages page
          - added extinfo type 4 page
          - completed status grid page
          - completed search

0.10_3  Sat Nov 28 12:12:11 CET 2009
          - completed status hostdetail page
          - completed status servicedetail page
          - completed process info page

0.10_2  Thu Nov 19 09:10:38 CET 2009