@@ -45,6 +45,7 @@ requires:
   FCGI::ProcManager: 0
   File::Copy::Recursive: 0
   GD: 0
+  HTML::Entities: 0
   HTTP::Body: 0
   LWP: 0
   Log::Dispatch::File: 0
