@@ -58,6 +58,7 @@ use_ssl_authentication=0
 # define this variable, anyone who has not authenticated to the web
 # server will inherit all rights you assign to this user!
 
+#default_user_name=blah
 default_user_name=thrukadmin
 
 
